@@ -23,10 +23,11 @@
 @interface Layer2 : Layer
 {
 	CGPoint	centeredMenu;
+	BOOL alignedH;
 }
 -(void) menuCallbackBack: (id) sender;
--(void) menuCallbackH: (id) sender;
--(void) menuCallbackV: (id) sender;
+-(void) menuCallbackOpacity: (id) sender;
+-(void) menuCallbackAlign: (id) sender;
 @end
 
 @interface Layer3 : Layer
