@@ -24,7 +24,8 @@ version 0.7.2 - xxx
  . Director: Attach uses 'bounds' not 'frame' (issue #233)
  . Documentation: API doc documents free functions (issue #314)
  . Menu: an empty menu can be crated (issue #277)
- . Menu: supports padding (issue #249)
+ . Menu: align supports padding (issue #249)
+ . Menu: align takes into account scale (issue #248)
  . Menu: MenuToggleItem supports add/remove items in runtime (issue #224)
  . Particles: Use by default fire.pvr (issue #276)
  . Particles: resetSystem actually resets the system (issue #252)
@@ -38,6 +39,7 @@ version 0.7.2 - xxx
  . TextureAtlas: support for insert,remove,reorder (issue #275)
  . TextureAtlas: free indices correctly when out of memory (issue #293)
  . TextureAtlas: resizeCapacity returns BOOL instead of raise exception (issue #294)
+ . TextureAtlas: prevent crash when not enough memory while allocating color (issue #295)
  . TextureNode: texture is "retain" not "assign" (issue #230 and issue #274)
  . TileMapAtlas: supports fullpath (issue #220)
  . TileMapAtlas: don't render in subpixels (issue #135)
